// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders custom className 1`] = `
<button
  className="test c-Button c-Button--delta"
>
  button text
</button>
`;

exports[`Button renders link button 1`] = `
<a
  class="c-Button c-Button--delta"
  href="/"
>
  button text
</a>
`;

exports[`Button renders outline button 1`] = `
<button
  className="c-Button c-Button--delta c-Button--outline"
>
  button text
</button>
`;
